fix(calc-ui): layout shift on user input

--- a/src/features/calculator/components/CalculatorOutput/calculator-output.module.scss
+++ b/src/features/calculator/components/CalculatorOutput/calculator-output.module.scss
@@ -29,7 +29,7 @@
 
 		margin: 0;
 		font-size: larger;
-		min-height: 2.5rem;
+		min-height: 3rem;
 		text-align: right;
 		color: var(--primary-color);
 		// -webkit-overflow-scrolling: touch;
